# DEVideo

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
cmake/: FindWayland.cmake
include/: client.h  controller.h
src/: CMakeLists.txt  client.c  client.h  controller.c  controller.h  devices.c  devices.h  main.c  pipeline.c  pipeline.h  renderer.c  renderer.h  validation.c  validation.h  wl_client.c
src/shaders/: shader.vert
